data/derived/sp14/progs/unify/prog3690.ml.out
Characters 57-65:
  | h::t -> append h::x t;;
            ^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type 'b
       The type variable 'b occurs inside 'a list -> 'b list
